#149 closed defect (fixed)
ffplay: Broken sound in rtmp / rtsp streams
| Reported by: | alexandru | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | undetermined |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Command:
ffplay rtsp://media2.lsops.net/live/aljazeer_en_high.sdp
This BUG is present both in 0.7rc1, as in 0.6x too.
Change History (13)
follow-up: 2 comment:1 by , 15 years ago
| Status: | new → open |
|---|
follow-up: 3 comment:2 by , 15 years ago
Replying to cehoyos:
The stream decodes fine for me, what is the problem for you?
Please provide complete, uncut output of ffmpeg for all issues!
Please run first as I indicated:
ffplay rtsp://media2.lsops.net/live/aljazeer_en_high.sdp
the stream plays but the sound is horrible.
Please confirm if you can reproduce it by running the command
Thanks.
follow-up: 4 comment:3 by , 15 years ago
Replying to alexandru_mg3:
Replying to cehoyos:
The stream decodes fine for me, what is the problem for you?
Please provide complete, uncut output of ffmpeg for all issues!
Please run first as I indicated:
ffplay rtsp://media2.lsops.net/live/aljazeer_en_high.sdp
the stream plays but the sound is horrible.
Please confirm if you can reproduce it by running the command
Thanks.
Please help me also with the commande line parameters too (for ffplay (I tested with it) and for ffmpeg if you need it too) to can provide you complete, uncut output of ffmpeg for all issues!
TO BUG IS VERY SIMILAR IN BEHAVIOR (BAD SOUND) WITH THE SOLVED .wma one, but of course we have here an rtsp/rtmp stream: please also run also run:
ffplay rtsp://media2.lsops.net/live/aljazeer_en_high.sdp
to here the bad sound.
Thanks.
comment:4 by , 15 years ago
TO BUG IS VERY SIMILAR IN BEHAVIOR (BAD SOUND) WITH THE SOLVED .wma one, but of course we have here an rtsp/rtmp stream: please also run also run:
ffplay rtsp://media2.lsops.net/live/aljazeer_en_high.sdp
to here the bad sound.
Thanks.
The Audio Decoder with issues on the stream rtsp://media2.lsops.net/live/aljazeer_en_high.sdp
is : CODEC_ID_AAC
comment:6 by , 15 years ago
Replying to cehoyos:
Please provide complete, uncut output!
The bug is simple the sound is not intelligible: please run it too with ffplay
Please indicate me the command line parameters that I need to run, to can generate the uncut output...I'm new here, and is not very clear for me what I need to generate in addition
that the command "ffplay rtsp://media2.lsops.net/live/aljazeer_en_high.sdp"
once the stream sound is altered.
But I will do it if you tell me what I need to run, to supply you the needed feedback
Thanks for your help
comment:7 by , 15 years ago
I can reproduce this issue with the latest source snapshot.
FFplay plays the audio track in slowdown.
ffplay version c402ce4, Copyright (c) 2003-2011 the FFmpeg developers
built on May 3 2011 16:39:30 with gcc 4.5.0
libavutil 51. 2. 0 / 51. 2. 0
libavcodec 53. 3. 0 / 53. 3. 0
libavformat 53. 0. 3 / 53. 0. 3
libavdevice 53. 0. 0 / 53. 0. 0
libavfilter 2. 4. 0 / 2. 4. 0
libswscale 0. 14. 0 / 0. 14. 0
[rtsp @ 0x10eaee00] Estimating duration from bitrate, this may be inaccurate
Input #0, rtsp, from 'rtsp://media2.lsops.net/live/aljazeer_en_high.sdp':
Metadata:
title : WowzaMediaServer
Duration: N/A, start: 0.079000, bitrate: N/A
Stream #0.0: Audio: aac, 48000 Hz, 2 channels (FC), s16
Stream #0.1: Video: h264 (Constrained Baseline), yuv420p, 480x304, 25 fps, 25 tbr, 90k tbn, 50 tbc
[aac @ 0x10eb0600] Reserved SBR extensions are not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x10eb0600] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
[aac @ 0x10eb0600] Reserved SBR extensions are not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x10eb0600] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
[aac @ 0x10eb0600] Reserved SBR extensions are not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x10eb0600] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
[aac @ 0x10eb0600] Reserved SBR extensions are not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x10eb0600] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
[h264 @ 0x10eb1e00] concealing 213 DC, 213 AC, 213 MV errors0/0
[h264 @ 0x10eb1e00] cbp too large (4294967295) at 27 110B f=0/0
[h264 @ 0x10eb1e00] error while decoding MB 27 11
[h264 @ 0x10eb1e00] concealing 262 DC, 262 AC, 262 MV errors0/0
[aac @ 0x10eb0600] illegal icc 23KB vq= 0KB sq= 0B f=0/0
Last message repeated 1 times2KB vq= 0KB sq= 0B f=0/0
[aac @ 0x10eb0600] Expected to read 30 PS bits actually read 53.
[aac @ 0x10eb0600] Expected to read 30 PS bits actually read 51.
[aac @ 0x10eb0600] Expected to read 30 PS bits actually read 50.
[aac @ 0x10eb0600] illegal icc 35KB vq= 2KB sq= 0B f=0/0
[h264 @ 0x10eb1e00] concealing 570 DC, 570 AC, 570 MV errors0/0
[h264 @ 0x10eb1e00] corrupted macroblock 21 10 (total_coeff=-1)
[h264 @ 0x10eb1e00] error while decoding MB 21 10
[h264 @ 0x10eb1e00] concealing 298 DC, 298 AC, 298 MV errors
[h264 @ 0x10eb1e00] concealing 215 DC, 215 AC, 215 MV errors
[h264 @ 0x10eb1e00] negative number of zero coeffs at 13 11
[h264 @ 0x10eb1e00] error while decoding MB 13 11
[h264 @ 0x10eb1e00] concealing 276 DC, 276 AC, 276 MV errors
[aac @ 0x10eb0600] Expected to read 38 PS bits actually read 56.
[aac @ 0x10eb0600] Expected to read 30 PS bits actually read 51.
[aac @ 0x10eb0600] illegal icc 51KB vq= 1KB sq= 0B f=0/0
[aac @ 0x10eb0600] Expected to read 30 PS bits actually read 51.
Last message repeated 2 times8KB vq= 0KB sq= 0B f=0/0
[aac @ 0x10eb0600] illegal icc
[aac @ 0x10eb0600] Expected to read 30 PS bits actually read 50.
[aac @ 0x10eb0600] Expected to read 30 PS bits actually read 51.
Last message repeated 2 times8KB vq= 0KB sq= 0B f=0/0
[h264 @ 0x10eb1e00] negative number of zero coeffs at 10 1
[aac @ 0x10eb0600] Expected to read 30 PS bits actually read 51.
[h264 @ 0x10eb1e00] error while decoding MB 10 1
[h264 @ 0x10eb1e00] concealing 570 DC, 570 AC, 570 MV errors
[aac @ 0x10eb0600] Expected to read 38 PS bits actually read 56.
[aac @ 0x10eb0600] Expected to read 30 PS bits actually read 51.
[aac @ 0x10eb0600] Expected to read 38 PS bits actually read 56.
8.51 A-V: -7.378 s:0.5 aq= 68KB vq= 39KB sq= 0B f=0/0
comment:8 by , 15 years ago
| Reproduced by developer: | set |
|---|---|
| Version: | 0.7-rc1 → git-master |
Works fine with ffmpeg.
comment:9 by , 15 years ago
| Summary: | Broken sound in rtmp / rtsp streams → ffplay: Broken sound in rtmp / rtsp streams |
|---|
comment:10 by , 15 years ago
I experience the same results with the mms version of that stream, so it's likely not rtmp/rtsp specific. (They use the same encoder for the mms stream but send it over a windows media server)
ffplay mmsh://media5.lsops.net/aljazeer_en
ffplay version git-N-30775-g9e2f448, Copyright (c) 2003-2011 the FFmpeg developers
built on Jun 14 2011 20:15:51 with gcc 4.5.2
configuration: --prefix=/usr --enable-gpl --enable-version3 --enable-nonfree --enable-shared --enable-postproc --enable-libx264 --enable-frei0r --enable-librtmp --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libdc1394 --enable-libmp3lame --enable-libtheora --enable-libopenjpeg --enable-libdirac --enable-libvpx --enable-libgsm --enable-libschroedinger --enable-libspeex --enable-libvorbis --enable-libxvid --enable-libfaac --cpu=amdfam10 --arch=x86_64 --enable-x11grab --enable-libxavs --enable-libnut --enable-libfreetype --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libcelt
libavutil 51. 8. 0 / 51. 8. 0
libavcodec 53. 7. 0 / 53. 7. 0
libavformat 53. 3. 1 / 53. 3. 1
libavdevice 53. 1. 1 / 53. 1. 1
libavfilter 2. 18. 0 / 2. 18. 0
libswscale 0. 14. 1 / 0. 14. 1
libpostproc 51. 2. 0 / 51. 2. 0
[asf @ 0x15be500] max_analyze_duration 5000000 reached at 5040000
[asf @ 0x15be500] Estimating duration from bitrate, this may be inaccurate
Input #0, asf, from 'mmsh://media5.lsops.net/aljazeer_en':
Duration: N/A, start: 10183.426000, bitrate: 32 kb/s
Stream #0.0: Video: h264 (Constrained Baseline), yuv420p, 480x304, PAR 1:1 DAR 30:19, 25 fps, 25 tbr, 1k tbn, 50 tbc
Stream #0.1: Audio: aac, 48000 Hz, 2 channels (FC), s16, 32 kb/s
[aac @ 0x160a220] Reserved SBR extensions are not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x160a220] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
[aac @ 0x160a220] Reserved SBR extensions are not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x160a220] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
[aac @ 0x160a220] Reserved SBR extensions are not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[aac @ 0x160a220] If you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/MPlayer/incoming/ and contact the ffmpeg-devel mailing list.
comment:11 by , 15 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
comment:12 by , 15 years ago
Could you tell me the git version and eventually the file where this fix was done?
Thanks?



The stream decodes fine for me, what is the problem for you?
Please provide complete, uncut output of ffmpeg for all issues!