ffplay: fix order of operations for sdl audio open. Fixes Ticket149

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>